2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* object.c (memory_object_destroy): Set discardable bit if appropriate.
	
2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* object.c (memory_object_destroy): Move lru_lock unlock later.
	
2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* object.h (struct object_desc): Change live from bit field to a
	bool.
	* object.c: Include <assert.h>.
	(memory_object_destroy): Add asserts.  Fix canary being careful
	not to overwrite DESC->LIVE.
	(object_find_soft): Add assert.
	(folio_object_alloc): Likewise.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* activity.h: Include "list.h".
	(LIST_CLASS_TYPE): Declare an activity_children list.
	(struct activity): Change children's type to a struct
	activity_children_list.  Replace sibling_next and sibling_prev
	with sibling, a struct list_node.
	(activity_for_each_inmemory_child): Remove macro.
	* activity.c (children_list_insert_after): Remove function.
	Replace uses with appropriate list function.
	(children_list_detach): Likewise.
	* pager.c (pager_collect): Replace use of
	activity_for_each_inmemory_child with a list iterator.
	* ager.c (ager_loop): Likewise.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* object.h (object_desc_unmap) [_L4_TEST_ENVIRONMENT]: Do nothing.
	(object_desc_unmap) [_L4_TEST_ENVIRONMENT]: When adding the dirty
	bit, be careful to make sure that the correct value is bitwise
	or'ed into DESC->DIRTY.
	(object_desc_flush): New function.
	* cap.c (cap_shootdown): Don't use l4_unmap_fpage, use
	object_desc_unmap instead.
	* pager.c (pager_collect): Replace use of object_desc_unmap with
	object_desc_flush.
	
2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* cap.c (cap_shootdown): If we encounter a capability designating
	the same object as CAP, skip it.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* list.h (list_insert_after): New function.
	(LIST_CLASS): Add above function to template.
	
	(LIST_CLASS_TYPE): New macro.